# cpp-challenge

./: CMakeLists.txt  main.cpp  rebuild_quest_list.md
